# open-transcribe

./: .env  Cargo.toml  README.md  requirements.txt  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build-linux-cuda.yaml  build-linux.yaml  build-windows.yaml  ci.yaml  release.yaml
src/: audio.rs  cli.rs  client.rs  config.rs  download.rs  dto.rs  lib.rs  main.rs  server.rs
src/whisper/: config.rs  mod.rs  resampler.rs  transcriber.rs
usage/: simple-test.py
web/: index.html  package.json  pnpm-lock.yaml
web/src/net/: index.ts
