[package]
name = "open-transcribe"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
anyhow = "1.0.98"
base64 = "0.22.1"
env_logger = "0.11.6"
futures-util = "0.3.31"
log = "0.4"
rubato = "0.16.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
whisper-rs = { version = "0.14", features = ["cuda", "log_backend"] }
reqwest = { version = "0.12", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
cpal = "0.16"
clap = { version = "4.4", features = ["derive"] }
