[package]
name = "open-transcribe"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.11.0", default-features = false, features = [
    "macros",
] }
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
anyhow = "1.0.98"
base64 = "0.22.1"
env_logger = "0.11.6"
futures-util = "0.3.31"
log = "0.4"
rubato = "0.16.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
whisper-rs = { version = "0.14", features = ["log_backend"] }
reqwest = { version = "0.12", default-features = false, features = [
    "multipart",
    "rustls-tls",
] }
tokio = { version = "1.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "time",
] }
cpal = "0.16"
clap = { version = "4.4", features = ["derive"] }
